# EasyChat

./: CMakeLists.txt
src/: CMakeLists.txt  EasyChat.cpp
src/Error/: CMakeLists.txt
src/Error/include/: Error.h
src/Error/src/: Error.cpp
src/Error/tests/: Error_Tests.cpp  error_tests.cpp
src/Exception/: CMakeLists.txt
src/Exception/include/: Exception.h
src/Exception/src/: Exception.cpp
src/Exception/tests/: Exception_Tests.cpp
src/Socket/include/: Socket.h
src/Socket/src/: Socket.cpp
src/Socket/tests/: Socket_Tests.cpp
