###############################################################################
###                          LIBRARY CONFIGURATIONS                         ###
###############################################################################

add_executable (
  ${PROJECT_NAME}
    EasyChat.cpp
)


###############################################################################
###                              SUBDIRECTORIES                             ###
###############################################################################

add_subdirectory (
  Error
)


###############################################################################
###                              LINK LIBRARIES                             ###
###############################################################################

target_link_libraries (
  ${PROJECT_NAME}
    PRIVATE
      Error
)

###############################################################################
###                               GTEST LIBRARY                             ###
###############################################################################

enable_testing()

find_package (
  GTest
   REQUIRED
)

include_directories (
  ${GTEST_INCLUDE_DIRS}
)